--- a/学习总结/实例练习总结.ipynb
+++ b/学习总结/实例练习总结.ipynb
@@ -133,13 +133,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "(1, 2, 3, 4) (11, 12, 13, 14)\n[]\n"
+     "text": "[1, 2, 3, 4] [11, 12, 13, 14]\n"
     }
    ],
    "source": [
@@ -149,8 +149,8 @@
     "b1=[11,12,13,14]\n",
     "zipped=zip(a1,b1)\n",
     "# print(list(zipped))\n",
-    "a2,b2=zip(*zipped)\n",
-    "print(a2,b2)\n",
+    "# a2,b2=zip(*zipped)\n",
+    "# print(a2,b2)\n",
     "# print(list(zipped))\n",
     "a3,b3=map(lambda x:list(x),zip(*zipped))\n",
     "print(a3,b3)\n"
@@ -869,16 +869,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "c:\\Users\\Lenovo\\Documents\\studynotebook\\学习总结\n",
-      "c:\\Users\\Lenovo\\Documents\\scratch\n"
-     ]
+     "name": "stdout",
+     "text": "c:\\Users\\Lenovo\\Documents\\studynotebook\\学习总结\nc:\\Users\\Lenovo\\Documents\\scratch\n"
     }
    ],
    "source": [
@@ -920,17 +917,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "C:\\Users\\Lenovo\\Documents\\studynotebook\n",
-      "C:\\Users\\Lenovo\\scratch\n",
-      "0.00 has passed\n"
-     ]
+     "name": "stdout",
+     "text": "c:\\Users\\Lenovo\\Documents\\studynotebook\\学习总结\nc:\\Users\\Lenovo\\Documents\\scratch\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***2 docs has been readed\n20-06-06 18:14:47***3 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***2 docs has been readed\n20-06-06 18:14:47***3 docs has been readed\n20-06-06 18:14:47***4 docs has been readed\n20-06-06 18:14:47***5 docs has been readed\n20-06-06 18:14:47***6 docs has been readed\n20-06-06 18:14:47***7 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***0 docs has been readed\n20-06-06 18:14:47***1 docs has been readed\n20-06-06 18:14:47***2 docs has been readed\n20-06-06 18:14:47***3 docs has been readed\n20-06-06 18:14:47***4 docs has been readed\n20-06-06 18:14:47***5 docs has been readed\n20-06-06 18:14:47***6 docs has been readed\n20-06-06 18:14:47***7 docs has been readed\n20-06-06 18:14:47***8 docs has been readed\n20-06-06 18:14:47***9 docs has been readed\n20-06-06 18:14:47***10 docs has been readed\n20-06-06 18:14:47***11 docs has been readed\n20-06-06 18:14:47***12 docs has been readed\n20-06-06 18:14:47***13 docs has been readed\n20-06-06 18:14:47***14 docs has been readed\n20-06-06 18:14:47***15 docs has been readed\n20-06-06 18:14:47***16 docs has been readed\n20-06-06 18:14:47***17 docs has been readed\n20-06-06 18:14:47***18 docs has been readed\n20-06-06 18:14:47***19 docs has been readed\n20-06-06 18:14:47***20 docs has been readed\n20-06-06 18:14:47***21 docs has been readed\n20-06-06 18:14:47***22 docs has been readed\n20-06-06 18:14:47***23 docs has been readed\n20-06-06 18:14:47***24 docs has been readed\n20-06-06 18:14:47***25 docs has been readed\n20-06-06 18:14:47***26 docs has been readed\n20-06-06 18:14:47***27 docs has been readed\n20-06-06 18:14:47***28 docs has been readed\n0.07 has passed\n"
     }
    ],
    "source": [
@@ -951,7 +944,7 @@
     "    des=os.path.join(os.path.dirname(os.path.dirname(os.getcwd())),'scratch')\n",
     "    print(des)\n",
     "    start=time.perf_counter()\n",
-    "#     print_dirs(des)\n",
+    "    # print_dirs(des)\n",
     "    end=time.perf_counter()\n",
     "    print('%.2f has passed'%(end-start))\n"
    ]
@@ -1001,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1026,7 @@
     "        n+=1\n",
     "\n",
     "if __name__=='__main__':\n",
-    "    fib(50)\n"
+    "    fib(100)\n"
    ]
   },
   {
